--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
           <li><a href="">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
-        <address>
-          <a href="info@devstudio.com">info@devstudio.com</a>
-          <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
-        </address>
+        <ul>
+          <li><a href="mail:info@devstudio.com">info@devstudio.com</a></li>
+
+          <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        </ul>
       </nav>
     </header>
 
@@ -33,37 +34,41 @@
       <section>
         <ul>
           <li>
-            <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h2>ПУНКТУАЛЬНІСТЬ</h2>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h2>ПЛАНУВАННЯ</h2>
+            <h3>ПЛАНУВАННЯ</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань..
             </p>
           </li>
         </ul>
+      </section>
+      <section>
         <h2>Чим ми займаємося</h2>
-        <img src="" alt="" width="370" height="294" />
-        <img src="" alt="" width="370" height="294" />
-        <img src="" alt="" width="370" height="294" />
+        <ul>
+          <li><img src="" alt="" width="370" height="294" /></li>
+          <li><img src="" alt="" width="370" height="294" /></li>
+          <li><img src="" alt="" width="370" height="294" /></li>
+        </ul>
       </section>
 
       <section>
@@ -97,8 +102,8 @@
       <a href="">WebStudio</a>
       <address>
         <ul>
-          <li>м. Київ, пр-т Лесі Українки, 26</li>
-          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="" target="_blank">Київ, пр-т Лесі Українки, 26></a></li>
+          <li><a href="mail:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
         </ul>
       </address>
